--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (0.9) experimental; urgency=low
+
+  * Update upstream to 0.9
+
+ -- Brandon L Black <blblack@gmail.com>  Tue, 23 Jan 2024 14:19:06 -0600
+
 tofurkey (0.6) experimental; urgency=low
 
   * Initial debian release
