--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.0.0) experimental; urgency=low
+
+  * Update upstream to 1.0.0
+
+ -- Brandon L Black <blblack@gmail.com>  Wed, 24 Jan 2024 13:11:17 -0600
+
 tofurkey (0.9) experimental; urgency=low
 
   * Update upstream to 0.9
