More pedantic key privacy
* Added sodium_memzero of key buffer prior to any stdio log output
  calls on failures in safe_read_keyfile() after attempting a read
* Narrowed the window of signal blocking in do_keys() (after alloc
  and time math, but before loading key)
* Added signal blocking around the key handling in autokey_setup()
  matching that of do_keys()
* Re-ordered and trimmed some verbose log outputs in do_keys() to
  avoid stdio while holding any keys at all (except in the -V
  case, where it's unavoidable for the short term keys).

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+
+    * A few pedantic fixups to improve the security of secret key
+      data while loaded in memory for use
+
 1.0.0 - 2024-01-24
     * Minor build improvements (dependencies, rundir stuff)
     * Minor code/documentation refactors/improvements
