--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 
     * Minor fixups to manpage formatting
     * Minor source code formatting (wrap lines >= 100)
+    * Some verbose (-v) stderr outputs changed in order to be a
+      bit less confusing and/or over-verbose
     * A few pedantic fixups to improve the security of secret key
       data while loaded in memory for use
 
