--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.0.1) experimental; urgency=low
+
+  * Update upstream to 1.0.1
+
+ -- Brandon L Black <blblack@gmail.com>  Tue, 30 Jan 2024 08:55:08 -0600
+
 tofurkey (1.0.0) experimental; urgency=low
 
   * Update upstream to 1.0.0
