--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+1.0.2 - 2024-02-07
+    * Made the error messages for certain kinds of read() and write() failures
+      less-confusing and more-informative.
+    * Autokey file perms on creation changed from 0400 to 0600, to make it
+      possible for it to truncate files it created in previous runs, in certain
+      error cases.
+    * Fixed the potential leak of a single fd in a corner-case error condition
+      on startup in autokey mode.
+
 1.0.1 - 2024-01-30
     * Minor fixups to manpage formatting
     * Minor source code formatting (wrap lines >= 100)
