--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.0.2) experimental; urgency=low
+
+  * Update upstream to 1.0.2
+
+ -- Brandon L Black <blblack@gmail.com>  Wed, 07 Feb 2024 10:34:41 -0600
+
 tofurkey (1.0.1) experimental; urgency=low
 
   * Update upstream to 1.0.1
