--- a/tofurkey.8
+++ b/tofurkey.8
@@ -47,7 +47,7 @@ Filename to persist an auto-generated key, if \-k is not used.
 Defaults to \fI/run/tofurkey.autokey\fR
 .TP
 \fB\-i\fR
-Interval seconds for key rotation, default is 21600 (6 hours),
+Interval seconds for key rotation, default is 21600,
 allowed range is 10 - 604800, must be even (daemon wakes up to rotate
 keys at every half-interval of unix time to manage validity overlaps)
 .TP
