Example debianization for 1.1.0
Note this is just meant to be an example/baseline for trivial
debianiziation of this package, good enough that I can build a
working local package with "debuild -us -uc".  Real packagers can
take or leave it as a basis for real packaging.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+tofurkey (1.1.0) experimental; urgency=low
+
+  * Update upstream to 1.1.0
+  * Note that the libev dependency has been removed!
+
+ -- Brandon L Black <blblack@gmail.com>  Tue, 13 Feb 2024 22:36:18 -0600
+
 tofurkey (1.0.2) experimental; urgency=low
 
   * Update upstream to 1.0.2
