Example debianization for 1.2.0
Note this is just meant to be an example/baseline for trivial
debianiziation of this package, good enough that I can build a
working local package with "debuild -us -uc".  Real packagers can
take or leave it as a basis for real packaging.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.2.0) experimental; urgency=low
+
+  * Update upstream to 1.2.0
+
+ -- Brandon L Black <blblack@gmail.com>  Tue, 27 Feb 2024 12:44:34 -0600
+
 tofurkey (1.1.0) experimental; urgency=low
 
   * Update upstream to 1.1.0
