--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.3.1 - 2024-03-03
+    * Zig port: tiny bugfix to allow building on 0.11.0 again
+
 1.3.0 - 2024-03-03
     * Coredumps are disabled at startup via setrlimit()
     * Process address space locked into memory at startup via
