--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.3.1) experimental; urgency=low
+
+  * Update upstream to 1.3.1
+
+ -- Brandon L Black <blblack@gmail.com>  Sun, 03 Mar 2024 11:38:11 -0600
+
 tofurkey (1.3.0) experimental; urgency=low
 
   * Update upstream to 1.3.0
