--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+1.3.2 - 2024-04-22
+    * Zig port: Drop support for 0.11.0 (0.12.0 is current)
+
 1.3.1 - 2024-03-03
     * Zig port: tiny bugfix to allow building on 0.11.0 again
 
