--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+tofurkey (1.3.2) experimental; urgency=low
+
+  * Update upstream to 1.3.2
+
+ -- Brandon L Black <blblack@gmail.com>  Mon, 22 Apr 2024 09:35:22 -0500
+
 tofurkey (1.3.1) experimental; urgency=low
 
   * Update upstream to 1.3.1
